--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^4.2.8",
     "mongoose-pages": "0.0.3",
     "morgan": "~1.6.1",
+    "newrelic": "^1.24.0",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0"
   }
