--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "easyimage": "^2.1.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "mongoose": "^4.2.8",
